[gd_scene load_steps=4 format=3 uid="uid://c2wxv8c2rshvh"]

[ext_resource type="Script" path="res://player/player.gd" id="1_uyd3b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k06d5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_grm84"]
radius = 88.0
height = 236.0

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 20
scale = Vector2(0.65, 0.65)
script = ExtResource("1_uyd3b")

[node name="playerAni" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k06d5")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_grm84")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="stop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stop"]
shape = SubResource("CapsuleShape2D_grm84")

[connection signal="mouse_entered" from="stop" to="." method="_on_stop_mouse_entered"]
[connection signal="mouse_exited" from="stop" to="." method="_on_stop_mouse_exited"]
